MOD: Visualization in Right Panel. FIX: Anchor behind header

--- a/static/styles/stylesheet.css
+++ b/static/styles/stylesheet.css
@@ -24,7 +24,7 @@ body{font:13px/1.231 arial,helvetica,clean,sans-serif;*font-size:small;*font:x-s
 select,input,button,textarea,button{font:99% arial,helvetica,clean,sans-serif;}
 table{font-size:inherit;font:100%;}
 pre,code,kbd,samp,tt{font-family:Menlo,Monaco,"Courier New",monospace;*font-size:108%;line-height:100%;}
-body{text-align:center;}
+body{text-align:center;overflow:hidden;}
 
 strong { font-weight:bold; }
 em { font-style:italic; }
@@ -71,14 +71,7 @@ div.header ul li a { color:#000; text-transform:uppercase; }
 /* footer */
 #footer { margin:30px; text-align:right; font-size:80%; }
 .fineprint { color:#999; font-size:85%; }
-
-.content { padding: 110px 30px 10px ;}
-
-/* frames */
-#frame .content { margin:10px; }
-#frame h1 { font-size:120%; }
-#frame h2 { font-size:100%; }
-#frame ul { list-style:none; margin-left:0; }
+.content { padding: 10px 30px; position: absolute; bottom: 14px; overflow: auto;}
 
 /* class */
 div.type { color:#aaa; margin:10px 0 0; }
@@ -128,8 +121,19 @@ pre, .example { background-color:transparent; font-family:Menlo,Monaco,"Courier 
 .example .sh_file { color:#8F9FC0 /*#7f0055*/; font-weight:bold; }
 
 /* footer */
-footer { color:#999; font-size:11px; padding:10px 30px; }
-
+footer{
+	color:#999; font-size:11px; padding:10px 30px;
+	position: absolute;
+	bottom: 0px;
+	border-top: solid 1px #dadada;
+	height: 13px;
+	line-height: 13px;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+	width: 100%;
+	background: #f3f3f3;
+}
 
 .Properties{margin:0;padding:0;}
 .Properties li{
@@ -140,11 +144,12 @@ footer { color:#999; font-size:11px; padding:10px 30px; }
 .Properties li ul{padding-left: 10px;}
 
 .anchor_list{
-	border: solid 2px lightblue;
-	background: lightblue;
+	border: solid 5px #EDF3FE;
+	background: #EDF3FE;
 	margin: 10px 0px 20px;
 	padding: 0;
 }
+.anchor_list h2{background: lightblue;}
 
 .anchor_list ul,
 .anchor_list ul li{
